Fix Dropbox connector

--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -51,7 +51,7 @@
       </li>
       <ul>
         <li *ngIf="hasActiveUploads | async">
-          <span (click)="goToHistory(true)">{{ 'history.active_uploads' | translate }}</span>
+          <span (click)="goToHistory(true)">{{ 'history.active' | translate }}</span>
         </li>
       </ul>
     </ul>
