[sc-4241] Implement the new flow in desktop app (#619)
* Add sidebar

* Remove steps component

* Modify source configuration step

* Refactor sidebar

* Fix tests

* Modify selection and destination steps

* Remove confirmation step

* Modify history page

* Increment version

* Fix Dropbox connector

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -1,78 +1,118 @@
-<div class="container">
-  <div class="connectors-list">
-    <nde-connector
-      *ngFor="let connector of connectors"
-      [selected]="selectedConnector?.id === connector.id"
-      [title]="connector.title"
-      [logo]="connector.logo"
-      [description]="connector.description"
-      [hidden]="!!selectedConnector && selectedConnector.id !== connector.id"
-      (selectConnector)="onSelectConnector(connector.id)"></nde-connector>
-  </div>
-  <form
-    *ngIf="!!fields && !!form"
-    [formGroup]="form"
-    qa="fields-form"
-    (ngSubmit)="validate()">
-    <div
-      *ngFor="let field of fields"
-      class="field">
-      <pa-input
-        *ngIf="field.type === 'text'"
-        [help]="field.help | translate"
-        [formControlName]="field.id">
-        {{ field.label | translate }}
-      </pa-input>
-      <pa-textarea
-        *ngIf="field.type === 'textarea'"
-        [help]="field.help | translate"
-        [formControlName]="field.id">
-        {{ field.label | translate }}
-      </pa-textarea>
-
-      <div
-        *ngIf="field.type === 'select'"
-        class="select-field-container">
-        <pa-select
-          [formControlName]="field.id"
-          [label]="field.label">
-          <pa-option
-            *ngFor="let option of field.options"
-            [disabled]="option.disabled"
-            [value]="option.value">
-            {{ option.label }}
-          </pa-option>
-        </pa-select>
-
-        <pa-button
-          *ngIf="field.canBeRefreshed"
-          icon="refresh"
-          [paTooltip]="'upload.refresh' | translate: { field: field.label }"
-          (click)="refreshField(field.id)">
-          {{ 'upload.refresh' | translate: { field: field.label } }}
-        </pa-button>
-      </div>
-
-      <nde-folder-upload
-        *ngIf="field.type === 'folder'"
-        [formControlName]="field.id"></nde-folder-upload>
-    </div>
-
-    <div class="buttons">
-      <pa-button
-        qa="cancel"
-        kind="inverted"
-        (click)="cancel.next()">
-        {{ 'generic.cancel' | translate }}
-      </pa-button>
-      <pa-button
-        *ngIf="!!fields && !!form"
-        qa="validate"
-        type="submit"
-        kind="primary"
-        [disabled]="form.invalid">
-        {{ (type === 'sources' ? 'generic.next' : 'Upload') | translate }}
-      </pa-button>
-    </div>
-  </form>
+<div
+  *ngIf="(!fields && !form) || type === 'destinations'"
+  class="connectors-list">
+  <nde-connector
+    *ngFor="let connector of connectors"
+    [selected]="selectedConnector?.id === connector.id"
+    [title]="connector.title"
+    [logo]="connector.logo"
+    [description]="connector.description"
+    (selectConnector)="onSelectConnector(connector.id)"></nde-connector>
 </div>
+<form
+  *ngIf="!!fields && !!form"
+  [formGroup]="form"
+  qa="fields-form"
+  (ngSubmit)="validate()">
+  <div
+    *ngIf="type === 'sources'"
+    class="selected-source">
+    <img
+      [src]="selectedConnector.logo"
+      [alt]="selectedConnector.title + ' logo'" />
+    <div>{{ selectedConnector.title }}</div>
+  </div>
+  <div
+    *ngFor="let field of fields"
+    formGroupName="fields"
+    class="field">
+    <pa-input
+      *ngIf="field.type === 'text'"
+      [help]="field.help | translate"
+      [formControlName]="field.id">
+      {{ field.label | translate }}
+    </pa-input>
+    <pa-textarea
+      *ngIf="field.type === 'textarea'"
+      [help]="field.help | translate"
+      [formControlName]="field.id">
+      {{ field.label | translate }}
+    </pa-textarea>
+
+    <div
+      *ngIf="field.type === 'select'"
+      class="select-field-container">
+      <pa-select
+        [formControlName]="field.id"
+        [label]="field.label">
+        <pa-option
+          *ngFor="let option of field.options"
+          [disabled]="option.disabled"
+          [value]="option.value">
+          {{ option.label }}
+        </pa-option>
+      </pa-select>
+
+      <pa-button
+        *ngIf="field.canBeRefreshed"
+        icon="refresh"
+        aspect="basic"
+        [paTooltip]="'upload.refresh' | translate: { field: field.label }"
+        (click)="refreshField(field.id)">
+        {{ 'upload.refresh' | translate: { field: field.label } }}
+      </pa-button>
+    </div>
+
+    <nde-folder-upload
+      *ngIf="field.type === 'folder'"
+      [formControlName]="field.id"></nde-folder-upload>
+  </div>
+  <div
+    *ngIf="selectedConnector.helpUrl"
+    class="help">
+    <pa-icon
+      size="small"
+      name="info"></pa-icon>
+    <a
+      [href]="selectedConnector.helpUrl"
+      target="_blank"
+      rel="noopener noreferrer">
+      {{ 'upload.source.help' | translate: { source: selectedConnector.title } }}
+    </a>
+  </div>
+
+  <div
+    *ngIf="canStoreParams"
+    formGroupName="quickAccess"
+    class="quick-access">
+    <div class="field">
+      <pa-checkbox
+        formControlName="enabled"
+        (valueChange)="updateValidators($event)">
+        {{ 'upload.source.quick_access' | translate }}
+      </pa-checkbox>
+    </div>
+    <div class="field">
+      <pa-input formControlName="name">
+        {{ 'upload.source.quick_access_name' | translate }}
+      </pa-input>
+    </div>
+  </div>
+
+  <div class="buttons">
+    <pa-button
+      *ngIf="!!fields && !!form"
+      qa="validate"
+      type="submit"
+      kind="primary"
+      [disabled]="form.invalid">
+      {{ (type === 'sources' ? 'generic.save_continue' : 'Upload') | translate }}
+    </pa-button>
+    <pa-button
+      qa="cancel"
+      aspect="basic"
+      (click)="cancel.next()">
+      {{ 'generic.cancel' | translate }}
+    </pa-button>
+  </div>
+</form>
