--- a/apps/desktop/src/app/upload/select-files/select-files.component.scss
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.scss
@@ -6,24 +6,23 @@
   height: 100%;
 }
 
-h3 {
+h2 {
   margin: 0;
 }
 .header {
   flex: 0 0 auto;
   display: flex;
+  margin-top: rhythm(3);
 }
 
 .body {
-  flex: 1 1 0;
   overflow-y: auto;
 }
 
 .footer {
   display: flex;
-  align-self: center;
-  gap: rhythm(1);
-  padding-top: rhythm(4);
+  gap: rhythm(2);
+  padding-top: rhythm(8);
 }
 
 .search-form {
