--- a/apps/desktop/src/app/upload/upload.component.scss
+++ b/apps/desktop/src/app/upload/upload.component.scss
@@ -1,20 +1,10 @@
 @import 'variables';
 
 .container {
-  display: flex;
-  flex-direction: column;
+  max-width: rhythm(90);
   height: calc(100% - 20px);
 }
-.steps {
-  flex: 0 0 auto;
-  padding: 30px 40px;
-  background-color: #fff;
-  border-radius: 8px;
-  margin-bottom: 1em;
-}
-.content {
-  flex: 1 1 auto;
-  padding: 30px 40px;
-  background: #fff;
-  border-radius: 8px;
+
+h2 {
+  margin: 0;
 }
