rename dialog into chat for clarity

--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -5,7 +5,7 @@
 
   .actions {
     margin-left: auto;
-    .go-to-dialog {
+    .go-to-chat {
       display: flex;
       align-items: center;
       justify-content: end;
