--- a/libs/search-widget/src/components/answer/Chat.scss
+++ b/libs/search-widget/src/components/answer/Chat.scss
@@ -1,4 +1,4 @@
-.sw-dialog {
+.sw-chat {
   width: 100vw;
   height: calc(100vh - 3em);
   display: flex;
@@ -38,7 +38,7 @@
   }
 }
 @media (min-width: 599px) {
-  .sw-dialog {
+  .sw-chat {
     width: 100%;
     height: 100vh;
     .row-1,
