--- a/libs/search-widget/src/components/answer/ChatInput.scss
+++ b/libs/search-widget/src/components/answer/ChatInput.scss
@@ -1,4 +1,4 @@
-.sw-dialog-input {
+.sw-chat-input {
   align-items: center;
   box-sizing: border-box;
   display: flex;
@@ -39,7 +39,7 @@
   }
 }
 @media (min-width: 599px) {
-  .sw-dialog-input {
+  .sw-chat-input {
     border: 1px solid var(--color-dark-stronger);
   }
 }
