Fix permissions on contributor app
  - standalone is admin on resource list, label sets and entities
  - search page is disabled on standalone

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -22,6 +22,7 @@
           <a
             class="nav-link"
             routerLinkActive="active"
+            [class.disabled]="standalone"
             [routerLink]="kbUrl + '/search'">
             <pa-icon name="search"></pa-icon>
             <span class="nav-link-title">{{ 'stash.search' | translate }}</span>
