Fix viewer to work with standalone
  - Add standalone option to ViewerWidget
  - Fix preview to set standalone mode on viewer when needed
  - Fix app.init service to use prod CDN on standalone
  - Add a method to load the PDF src with proper header on standalone

--- a/libs/common/src/lib/resources/edit/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit/preview/preview.component.html
@@ -5,6 +5,11 @@
       *ngFor="let paragraph of paragraphs | async">
       <p>{{ paragraph.text }}</p>
     </div>
+    <div
+      *ngIf="(paragraphs | async)?.length === 0"
+      class="paragraph-container">
+      <p>{{ 'resource.field-no-paragraph' | translate }}</p>
+    </div>
   </div>
   <div class="viewer-button-container">
     <pa-button
