Add synonym entry in navbar
  - New synonyms lazy loaded module
  - New entry for synonyms in navbar (protected by feature flagging)
  - Cleanup navbar translations

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -58,6 +58,14 @@
             <pa-icon name="form"></pa-icon>
             <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
           </a>
+          <a
+            *ngIf="isSynonymsEnabled | async"
+            [routerLink]="[kbUrl + '/synonyms']"
+            routerLinkActive="active"
+            class="nav-link">
+            <pa-icon name="synonyms"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.side.synonyms' | translate }}</span>
+          </a>
         </div>
       </div>
 
