--- a/libs/common/src/lib/label/label-sets/label-set/color-picker/color-picker.component.scss
+++ b/libs/common/src/lib/label/label-sets/label-set/color-picker/color-picker.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../../apps/dashboard/src/variables';
+@import 'apps/dashboard/src/variables';
 
 .color-picker {
   display: flex;
