--- a/libs/common/src/lib/label/label-sets/label-set/label/label.component.scss
+++ b/libs/common/src/lib/label/label-sets/label-set/label/label.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../../apps/dashboard/src/variables';
+@import 'apps/dashboard/src/variables';
 
 .label {
   align-items: center;
