--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.scss
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../apps/dashboard/src/variables';
+@import 'apps/dashboard/src/variables';
 
 .select {
   position: relative;
