--- a/libs/search-widget/src/components/previewers/Player.scss
+++ b/libs/search-widget/src/components/previewers/Player.scss
@@ -1,18 +1,20 @@
 .sw-player {
-  .video-container {
-    position: relative;
-    width: 100%;
-    padding-top: 56.25%;
-    background-color: #000;
-  }
   video {
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: block;
     width: 100%;
-    height: 100%;
   }
   audio {
     width: 100%;
+  }
+}
+
+@media (min-width: 648px) {
+  .sw-player {
+    height: 100%;
+
+    video {
+      background-color: var(--color-dark-stronger);
+      max-height: 100%;
+    }
   }
 }
