--- a/apps/dashboard/src/app/synonyms/synonyms.component.scss
+++ b/apps/dashboard/src/app/synonyms/synonyms.component.scss
@@ -31,6 +31,29 @@
   }
 }
 
+.table-container {
+  margin-top: rhythm(8);
+
+  .edit-synonym-input {
+    background: none;
+    box-shadow: inset 0 -1px 0px $color-neutral-light;
+    border: none;
+    width: 100%;
+  }
+
+  .action-buttons-container {
+    display: flex;
+    gap: rhythm(0.5);
+    padding-right: rhythm(1);
+    opacity: 0;
+    transition: opacity $transition-hint;
+
+    &.visible {
+      opacity: 1;
+    }
+  }
+}
+
 @media (min-width: $size-viewport-xlarge-min) {
   :host {
     padding-right: rhythm(32);
