Synonym feature available only for business accounts

--- a/apps/manager/src/app/account/account-detail/account-detail.component.html
+++ b/apps/manager/src/app/account/account-detail/account-detail.component.html
@@ -61,6 +61,21 @@
                 *ngIf="isRoot">
                 Enterprise
               </mat-option>
+              <mat-option
+                value="stash-business"
+                *ngIf="isRoot">
+                Business
+              </mat-option>
+              <mat-option
+                value="stash-pro"
+                *ngIf="isRoot">
+                Pro
+              </mat-option>
+              <mat-option
+                value="stash-growth"
+                *ngIf="isRoot">
+                Growth
+              </mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field>
