Use tiles to render answer sources

--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -6,6 +6,12 @@
   .text {
     margin-top: var(--rhythm-1);
   }
+  .results {
+    display: flex;
+    flex-direction: column;
+    gap: var(--rhythm-2);
+    width: 100%;
+  }
 }
 @media (min-width: 599px) {
   .sw-answer {
