--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -3,6 +3,10 @@
   display: flex;
   flex-wrap: wrap;
 
+  .answer {
+    width: 100%;
+  }
+
   .actions {
     margin-left: auto;
     .go-to-chat {
