--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -8,7 +8,7 @@
   }
 
   .actions {
-    margin-left: auto;
+    width: 100%;
     .go-to-chat {
       display: flex;
       align-items: center;
@@ -22,10 +22,17 @@
 }
 @media (min-width: 599px) {
   .sw-initial-answer {
-    .actions .feedback {
-      display: flex;
-      align-items: center;
-      justify-content: end;
+    .answer {
+      width: calc(100% - var(--rhythm-27));
+    }
+
+    .actions {
+      width: var(--rhythm-27);
+      .feedback {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+      }
     }
   }
 }
