--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -14,6 +14,7 @@
       align-items: center;
       justify-content: end;
       cursor: pointer;
+      font-weight: var(--font-weight-semi-bold);
     }
     .feedback {
       display: none;
