Fix [sc-4561]: update kb switcher when kb list changes
  - add `kbList` and `currentAccount` observables in `sdk.service`
  - use and update `kbList` in account pages
  - Add missing translation in account home page

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -127,7 +127,7 @@
         [class.billing-enabled]="isBillingEnabled"
         [routerLink]="(isBillingEnabled | async) ? '../billing' : null">
         <div class="plan-name">
-          <strong>{{ 'billing.plan' | translate }}:</strong>
+          <strong>{{ 'account.type.label' | translate }}:</strong>
           <span>{{ 'account.type.' + (accountType | async) | translate }}</span>
         </div>
         <pa-icon
