Improve kb edition form to make it clear submission worked.

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -51,7 +51,7 @@
         <pa-button
           type="submit"
           kind="primary"
-          [disabled]="kbForm.invalid || kbForm.pristine">
+          [disabled]="kbForm.invalid || kbForm.pristine || saving">
           {{ 'generic.save' | translate }}
         </pa-button>
         <pa-button
