--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -2,6 +2,7 @@
   margin: var(--rhythm-1) 0;
   display: flex;
   flex-wrap: wrap;
+  border-bottom: 1px solid var(--color-neutral-light);
 
   .answer {
     width: 100%;
