[sc-4140]: Delete and reprocess resource from edit flow toolbar

--- a/libs/common/src/lib/resources/edit/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit/edit-resource.component.html
@@ -45,6 +45,16 @@
         paTooltip="resource.tooltip.add-field"
         aspect="basic"
         (click)="onViewChange()"></pa-button>
+      <pa-button
+        icon="refresh"
+        paTooltip="resource.tooltip.reprocess"
+        aspect="basic"
+        (click)="reprocessResource()"></pa-button>
+      <pa-button
+        icon="trash"
+        paTooltip="resource.tooltip.delete"
+        aspect="basic"
+        (click)="deleteResource()"></pa-button>
     </div>
   </header>
 
