--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -1,140 +1,253 @@
 <div class="checkout">
   <div>
     <h2>{{ 'billing.payment_details' | translate }}</h2>
-    <div>{{ 'billing.payment_details.description' | translate }}</div>
+    <div class="body-m">{{ 'billing.payment_details.description' | translate }}</div>
   </div>
 
   <div>
-    <div class="section-title">
-      <pa-icon name="circle-dash"></pa-icon>
-      {{ 'billing.billing_details' | translate }}
+    <div class="section-header">
+      <div class="section-title">
+        <pa-icon
+          *ngIf="editCustomer"
+          name="circle-dash"></pa-icon>
+        <pa-icon
+          *ngIf="!editCustomer"
+          name="circle-check"
+          color="#f06"></pa-icon>
+        {{ 'billing.billing_details' | translate }}
+      </div>
+      <div *ngIf="!editCustomer">
+        <pa-button
+          (click)="showCustomerForm()"
+          icon="edit"
+          size="small"
+          aspect="basic"></pa-button>
+      </div>
     </div>
-    <form
-      [formGroup]="billing"
-      class="billing-data">
-      <div class="field-line">
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="name">
-            {{ 'generic.name' | translate }} *
-          </label>
-          <pa-input
-            id="name"
-            formControlName="name"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
+    <div class="section-body">
+      <form
+        *ngIf="editCustomer"
+        [formGroup]="billing"
+        class="billing-form">
+        <div class="field-line">
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="name">
+              {{ 'generic.name' | translate }} *
+            </label>
+            <pa-input
+              id="name"
+              formControlName="name"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="company">
+              {{ 'billing.company' | translate }} *
+            </label>
+            <pa-input
+              id="company"
+              formControlName="company"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="vat">
+              {{ 'billing.vat_id' | translate }}
+            </label>
+            <pa-input
+              id="vat"
+              formControlName="vat"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
         </div>
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="company">
-            {{ 'billing.company' | translate }} *
-          </label>
-          <pa-input
-            id="company"
-            formControlName="company"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
+        <div class="field-line">
+          <div class="field-block long">
+            <label
+              class="title-s"
+              for="address">
+              {{ 'billing.address' | translate }} *
+            </label>
+            <pa-input
+              id="address"
+              formControlName="address"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="country">
+              {{ 'billing.country' | translate }} *
+            </label>
+            <pa-select
+              id="country"
+              formControlName="country"
+              [errorMessages]="errors"
+              externalLabel>
+              <pa-option
+                *ngFor="let country of countryList"
+                [value]="country.code">
+                {{ country.name }}
+              </pa-option>
+            </pa-select>
+          </div>
         </div>
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="vat">
-            {{ 'billing.vat_id' | translate }} *
-          </label>
-          <pa-input
-            id="vat"
-            formControlName="vat"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
+        <div class="field-line">
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="state">
+              {{ 'billing.state' | translate }}
+            </label>
+            <pa-input
+              id="state"
+              formControlName="state"
+              externalLabel></pa-input>
+          </div>
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="city">
+              {{ 'billing.city' | translate }} *
+            </label>
+            <pa-input
+              id="city"
+              formControlName="city"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
+          <div class="field-block">
+            <label
+              class="title-s"
+              for="postal_code">
+              {{ 'billing.postal_code' | translate }} *
+            </label>
+            <pa-input
+              id="postal_code"
+              formControlName="postal_code"
+              [errorMessages]="errors"
+              externalLabel></pa-input>
+          </div>
         </div>
+        <pa-button
+          (click)="saveCustomer()"
+          [disabled]="!billing.valid"
+          kind="primary">
+          {{ 'billing.save_continue' | translate }}
+        </pa-button>
+      </form>
+      <div
+        *ngIf="!editCustomer && customer"
+        class="body-m">
+        <div>{{ customer.billing_details.name }}</div>
+        <div>{{ customer.billing_details.company }}</div>
+        <div *ngIf="customer.billing_details.vat">{{ customer.billing_details.vat }}</div>
+        <div>{{ customer.billing_details.address }}</div>
+        <div>{{ customer.billing_details.city }} {{ customer.billing_details.postal_code }}</div>
+        <div>{{ customer.billing_details.state || '' }} {{ countries[customer.billing_details.country] }}</div>
       </div>
-      <div class="field-line">
-        <div class="field-block long">
-          <label
-            class="title-s"
-            for="address">
-            {{ 'billing.address' | translate }} *
-          </label>
-          <pa-input
-            id="address"
-            formControlName="address"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
-        </div>
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="country">
-            {{ 'billing.country' | translate }} *
-          </label>
-          <pa-select
-            id="country"
-            formControlName="country"
-            [errorMessages]="errors"
-            externalLabel>
-            <pa-option value="1">Country 1</pa-option>
-            <pa-option value="2">Country 2</pa-option>
-          </pa-select>
-        </div>
-      </div>
-      <div class="field-line">
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="state">
-            {{ 'billing.state' | translate }}
-          </label>
-          <pa-input
-            id="state"
-            formControlName="state"
-            externalLabel></pa-input>
-        </div>
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="city">
-            {{ 'billing.city' | translate }} *
-          </label>
-          <pa-input
-            id="city"
-            formControlName="city"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
-        </div>
-        <div class="field-block">
-          <label
-            class="title-s"
-            for="zip">
-            {{ 'billing.zip' | translate }} *
-          </label>
-          <pa-input
-            id="zip"
-            formControlName="zip"
-            [errorMessages]="errors"
-            externalLabel></pa-input>
-        </div>
-      </div>
-    </form>
+    </div>
   </div>
 
   <div>
-    <div class="section-title">
-      <pa-icon name="circle-dash"></pa-icon>
-      {{ 'billing.budget' | translate }}
-    </div>
-    <div [innerHTML]="'billing.budget_description' | translate"></div>
-    <form [formGroup]="budget">
-      <div class="budget">
-        <pa-input
-          type="number"
-          formControlName="budget"
-          [errorMessages]="errors"></pa-input>
-        <span class="title-m">€</span>
+    <div class="section-header">
+      <div class="section-title">
+        <pa-icon
+          *ngIf="editCard || !token"
+          name="circle-dash"></pa-icon>
+        <pa-icon
+          *ngIf="!editCard && token"
+          name="circle-check"
+          color="#f06"></pa-icon>
+        {{ 'billing.payment_method' | translate }}
+        <div class="powered-by">
+          <span class="body-xs">Powered by</span>
+          <pa-icon
+            path="assets/images/stripe-logo.svg"
+            size="large"></pa-icon>
+        </div>
       </div>
-    </form>
+      <div *ngIf="!editCard && token">
+        <pa-button
+          (click)="showCardForm()"
+          icon="edit"
+          size="small"
+          aspect="basic"></pa-button>
+      </div>
+    </div>
+    <div class="section-body">
+      <div
+        class="payment-method-form"
+        [class.hidden]="!editCard">
+        <div class="field-block">
+          <label
+            class="title-s"
+            for="card-name">
+            {{ 'billing.card_name' | translate }}
+          </label>
+          <pa-input
+            id="card-name"
+            [formControl]="cardName"
+            [errorMessages]="errors"
+            externalLabel></pa-input>
+        </div>
+        <div>
+          <label class="title-s">
+            {{ 'billing.card_details' | translate }}
+          </label>
+          <div class="card-element">
+            <div #card></div>
+          </div>
+          <div class="card-error">{{ cardError }}</div>
+        </div>
+        <pa-button
+          (click)="getToken()"
+          [disabled]="cardName.invalid || !validCard"
+          kind="primary">
+          {{ 'billing.save_continue' | translate }}
+        </pa-button>
+      </div>
+      <div
+        *ngIf="!editCard && token"
+        class="body-m">
+        <div>{{ cardName.value }}</div>
+        <div>{{ token.card.brand }}</div>
+        <div>**** **** **** {{ token.card.last4 }}</div>
+      </div>
+    </div>
   </div>
 
-  <pa-button kind="primary">Review and Confirm</pa-button>
+  <div>
+    <div class="section-header">
+      <div class="section-title">
+        <pa-icon name="circle-dash"></pa-icon>
+        {{ 'billing.budget' | translate }}
+      </div>
+    </div>
+    <div class="section-body">
+      <div class="budget-form">
+        <div [innerHTML]="'billing.budget_description' | translate"></div>
+        <div class="budget-input">
+          <pa-input
+            type="number"
+            [formControl]="budget"
+            [errorMessages]="errors"></pa-input>
+          <span class="title-m">€</span>
+        </div>
+        <pa-button
+          (click)="subscribe()"
+          [disabled]="editCustomer || editCard || budget.invalid"
+          kind="primary">
+          {{ 'Subscribe' | translate }}
+        </pa-button>
+      </div>
+    </div>
+  </div>
 </div>
