--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -95,6 +95,12 @@ ul.sw-dropdown-options {
   line-height: var(--line-height-title-xs);
 }
 
+.title-s {
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-semi-bold);
+  line-height: var(----line-height-title-s);
+}
+
 .body-m {
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-body);
