Ericbrehault/sc 4607/move from search to find (#633)
* refactor info card in component

* answer store

* send feedback

* show sources

* Dialog modal

* dialog input

* fix responsive

* fix close button layout

* speech recognition

* Mat review fixes

* rename dialog into chat for clarity

* fix talk2svelte build

* add speech synthesis

* find endpoint support

* Use chat endpoint

* pass context with question

* use /find

* Use tiles to render answer sources

* fix layout

* fix search in resource

* fix streaming

* feature flag on answer generation

* fix search in resource again

* fix expanded tile

* fix layout

* fix chat call

* get field data

* fix tests + clean up

* add feedback endpoint

* fix suggestions

* restore info card

* review

* clean up

* fix layout

* fix answer store

* fix speak

* render newlines in answers

* fix layout

* fix feedback

* do not enable answer in dashboard search if feature flagged

--- a/libs/search-widget/src/common/expander/Expander.scss
+++ b/libs/search-widget/src/common/expander/Expander.scss
@@ -2,4 +2,16 @@
   .expander-content {
     overflow: hidden;
   }
+  .header {
+    display: flex;
+    align-items: center;
+    .expander-icon {
+      transition: transform var(--transition-superfast);
+    }
+    &.expanded {
+      .expander-icon {
+        transform: rotate(90deg);
+      }
+    }
+  }
 }
