Resource table done with Pastanaga
  - one component by table: processed-resources, pending-resources and error-resources
  - no more page size dropdown nor pagination component below the table

--- a/libs/sistema/theme/tokens/_table.tokens.scss
+++ b/libs/sistema/theme/tokens/_table.tokens.scss
@@ -14,4 +14,4 @@ $color-background-table-header-row: $color-light-stronger;
 
 $padding-table-cell-medium: rhythm(0.5) rhythm(2);
 $min-height-table-cell: rhythm(5);
-$text-transform-table-header: default;
+$text-transform-table-header: none;
