--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -3,7 +3,7 @@
   <div
     class="loading-shade"
     *ngIf="isLoading">
-    <nsi-spinner *ngIf="isLoading"></nsi-spinner>
+    <nsi-spinner></nsi-spinner>
   </div>
 
   <div class="resource-list-header">
@@ -99,296 +99,36 @@
   </div>
 
   <div class="resource-list-content">
-    <div class="resource-table-header">
-      <div
-        class="resource-bulk-actions"
-        *ngIf="(isAdminOrContrib | async) && selection.selected.length > 0">
-        {{ 'resource.selected_count' | translate: { num: selectionCount$ | async } }}
+    <ng-container *ngIf="currentKb | async">
+      <stf-processed-resource-table
+        *ngIf="isMainView && data?.length > 0"
+        [data]="data"
+        [labelSets]="labelSets$ | async"
+        [bulkAction]="bulkAction"
+        (addLabels)="addLabelsToSelection($event)"
+        (clickOnTitle)="viewResource($event.resource.id)"
+        (deleteResources)="delete($event)"
+        (menuAction)="onMenuAction($event)"
+        (removeLabel)="removeLabel($event)"
+        (reprocessResources)="bulkReprocess($event)"></stf-processed-resource-table>
 
-        <ng-container *ngIf="hasLabelSets | async">
-          <app-label-dropdown
-            [labelSets]="labelSets$ | async"
-            (selectionChange)="updateLabelList($event)"
-            (close)="addLabelsToSelection()"
-            aspect="basic"
-            size="small">
-            {{ 'resource.add_labels' | translate }}
-          </app-label-dropdown>
-        </ng-container>
+      <stf-pending-resources-table
+        *ngIf="isPendingView && data?.length > 0"
+        [data]="data"
+        [bulkAction]="bulkAction"
+        (menuAction)="onMenuAction($event)"
+        (deleteResources)="delete($event)"></stf-pending-resources-table>
 
-        <ng-container *ngIf="selection.selected.length > 0">
-          <pa-button
-            kind="destructive"
-            aspect="basic"
-            size="small"
-            [disabled]="bulkAction.inProgress"
-            (click)="bulkDelete()">
-            {{ 'generic.delete' | translate }}
-          </pa-button>
-          <pa-button
-            aspect="basic"
-            size="small"
-            [disabled]="bulkAction.inProgress"
-            (click)="bulkReprocess()">
-            {{ (selection.selected.length === 1 ? 'generic.reindex' : 'generic.reindex-plural') | translate }}
-          </pa-button>
-          <div
-            class="body-m"
-            *ngIf="bulkAction.inProgress">
-            {{ bulkAction.label | translate }}
-            {{ bulkAction.done }} / {{ bulkAction.total }}
-          </div>
-        </ng-container>
+      <stf-error-resources-table
+        *ngIf="isFailureView && data?.length > 0"
+        [data]="data"
+        [bulkAction]="bulkAction"
+        [errorCount]="(statusCount | async)?.error"
+        (isLoading)="setLoading($event)"
+        (menuAction)="onMenuAction($event)"
+        (deleteResources)="delete($event)"></stf-error-resources-table>
+    </ng-container>
 
-        <ng-container
-          *ngIf="isFailureView && isFullPageSelected() && this.resultsLength > this.pageSize && !bulkAction.inProgress">
-          <pa-button
-            aspect="basic"
-            kind="primary"
-            *ngIf="!allErrorsSelected"
-            (click)="selectAllErrors()">
-            {{ 'resource.select-all-failures' | translate: { count: (statusCount | async)?.error } }}
-          </pa-button>
-          <pa-button
-            aspect="basic"
-            kind="primary"
-            *ngIf="allErrorsSelected"
-            (click)="clearSelection()">
-            {{ 'generic.clear-selection' | translate }}
-          </pa-button>
-        </ng-container>
-      </div>
-      <div class="table-options">
-        <div *ngIf="isMainView">
-          <nsi-dropdown-button
-            size="small"
-            aspect="basic"
-            [popupRef]="visibleColumns">
-            {{ 'resource.visible_columns_dropdown' | translate }}
-          </nsi-dropdown-button>
-          <pa-dropdown #visibleColumns>
-            <pa-option
-              *ngFor="let column of optionalColumns"
-              [value]="column.value"
-              dontCloseOnSelect>
-              <pa-checkbox
-                [(value)]="column.visible"
-                (valueChange)="columnVisibilityUpdate.next($event)">
-                {{ column.label | translate }}
-              </pa-checkbox>
-            </pa-option>
-          </pa-dropdown>
-        </div>
-        <div *ngIf="pageSizeOptions | async as options">
-          <nsi-dropdown-button
-            size="small"
-            aspect="basic"
-            [popupRef]="pageSizeMenu">
-            {{ 'resource.resource_page_number' | translate: { num: filters.size } }}
-          </nsi-dropdown-button>
-          <pa-dropdown #pageSizeMenu>
-            <pa-option
-              *ngFor="let option of options"
-              [value]="option.key"
-              (selectOption)="setPageSize(option)">
-              {{ option.value }}
-            </pa-option>
-          </pa-dropdown>
-        </div>
-      </div>
-    </div>
-
-    <div class="table-container">
-      <table
-        *ngIf="currentKb | async"
-        [dataSource]="data || []"
-        cdk-table>
-        <ng-container cdkColumnDef="select">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            <pa-checkbox
-              [value]="selection.hasValue() && isFullPageSelected()"
-              [paTooltip]="(isFullPageSelected() ? 'generic.deselect_all' : 'generic.select_all') | translate"
-              [disabled]="bulkAction.inProgress"
-              (change)="masterToggle()"></pa-checkbox>
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row">
-            <pa-checkbox
-              [value]="selection.isSelected(row.resource)"
-              [disabled]="bulkAction.inProgress"
-              (change)="selection.toggle(row.resource)"></pa-checkbox>
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="title">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'resource.title' | translate }}
-          </th>
-          <td
-            cdk-cell
-            class="clickable"
-            *cdkCellDef="let row"
-            (click)="viewResource(row.resource.id)">
-            <div class="title-with-icon">
-              <pa-icon
-                *ngIf="row.resource.icon | mimeIcon as icon"
-                [path]="'assets/icons/' + icon"></pa-icon>
-              <div class="title-and-description">
-                <div>{{ row.resource.title }}</div>
-                <small *ngIf="row.description">{{ row.description }}</small>
-              </div>
-              <div class="title-status">
-                <pa-icon
-                  *ngIf="row.resource.metadata?.status === 'PENDING'"
-                  name="clock-dash"></pa-icon>
-                <pa-icon
-                  class="error"
-                  *ngIf="row.resource.metadata?.status === 'ERROR'"
-                  name="circle-cross"></pa-icon>
-              </div>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="classification">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'resource.classification-column' | translate }}
-          </th>
-          <td
-            cdk-cell
-            class="clickable"
-            *cdkCellDef="let row"
-            (click)="viewResource(row.resource.id)">
-            <div class="label-container">
-              <nsi-label
-                *ngFor="let label of row.labels"
-                [color]="label.color"
-                [disabled]="deletingLabel"
-                (removeLabel)="removeLabel(row.resource, label, $event)">
-                {{ label.label }}
-              </nsi-label>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="modification">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'generic.date' | translate }}
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row">
-            {{ row.resource.created | formatDate: { default: true } }}
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="status">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'resource.status' | translate }}
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row">
-            {{ row.status }}
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="language">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'generic.language' | translate }}
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row">
-            {{ row.resource.metadata.language || '–' }}
-          </td>
-        </ng-container>
-
-        <ng-container cdkColumnDef="actions">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'generic.actions' | translate }}
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row">
-            <pa-button
-              icon="more-vertical"
-              aspect="basic"
-              size="small"
-              paTooltip="generic.actions"
-              [disabled]="bulkAction.inProgress"
-              [paPopup]="menu">
-              {{ 'generic.actions' | translate }}
-            </pa-button>
-            <pa-dropdown #menu>
-              <pa-option
-                *ngIf="isMainView"
-                [disabled]="!(isAdminOrContrib | async)"
-                (selectOption)="edit(row.resource.id)">
-                {{ 'resource.menu.edit' | translate }}
-              </pa-option>
-              <pa-option
-                *ngIf="isMainView"
-                [disabled]="!(isAdminOrContrib | async)"
-                (selectOption)="annotate(row.resource.id)">
-                {{ 'resource.menu.annotate' | translate }}
-              </pa-option>
-              <pa-option
-                *ngIf="isMainView"
-                [disabled]="!(isAdminOrContrib | async)"
-                (selectOption)="classify(row.resource.id)">
-                {{ 'resource.menu.classify' | translate }}
-              </pa-option>
-              <pa-option
-                *ngIf="!isPendingView"
-                [disabled]="!(isAdminOrContrib | async)"
-                (selectOption)="reindex(row.resource)">
-                {{ 'generic.reindex' | translate }}
-              </pa-option>
-              <pa-separator *ngIf="!isPendingView"></pa-separator>
-              <pa-option
-                destructive
-                [disabled]="!(isAdminOrContrib | async)"
-                (selectOption)="delete([row.resource])">
-                {{ 'generic.delete' | translate }}
-              </pa-option>
-            </pa-dropdown>
-          </td>
-        </ng-container>
-
-        <tr
-          cdk-header-row
-          *cdkHeaderRowDef="displayedColumns | async"></tr>
-        <tr
-          cdk-row
-          *cdkRowDef="let row; columns: displayedColumns | async"></tr>
-      </table>
-    </div>
-
-    <div
-      class="pagination"
-      *ngIf="resultsLength > 0">
-      <stf-pagination
-        [page]="page"
-        [total]="totalPages"
-        (prev)="prevPage()"
-        (next)="nextPage()"></stf-pagination>
-    </div>
     <div
       *ngIf="isMainView && !!data && resultsLength === 0 && !standalone"
       class="empty-kb">
